# LogVisualizer

./: .gitignore  README.MD  package-lock.json
backend/: CMakeLists.txt
backend/src/: main.cpp
backend/src/database/: database.hpp
backend/src/handlers/: log_handler.hpp
backend/src/models/: log_entry.hpp
log-visualization-frontend/: package-lock.json  package.json
log-visualization-frontend/src/: App.jsx  LogVisualizationDashboard.jsx  main.jsx
